--- a/Templates/home.html
+++ b/Templates/home.html
@@ -47,37 +47,114 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                       </div>
                                       <div class="modal-body">
-                                        <form>
-                                          <div class="form-group">
+                                        <form action="{% url 'salvar_compromisso' %}" enctype="multipart/form-data" method="POST">{% csrf_token %}
+                                          <div class="form-group" >
                                             <label >Data</label>
-                                            <input type="Date" class="form-control" id="dataCompromisso" aria-describedby="data" placeholder="Informe a data">
+                                            <input type="Date" class="form-control" name="dataC" placeholder="Informe a data">
                                           </div>
                                           <div class="form-group">
                                             <label>Hora de Inico</label>
-                                            <input type="Time" id="horaInicio" class="form-control">
+                                            <input type="Time" name="horaInicio" class="form-control">
                                           </div>
                                           <div class="form-group">
                                             <label>Hora de Térmio</label>
-                                            <input type="Time" id="horaTermino" class="form-control"  placeholder="Horário de Térmio">
+                                            <input type="Time" name="horaTermino" class="form-control"  placeholder="Horário de Térmio">
                                           </div>
                                            <div class="form-group">
                                             <label>Decrição</label>
-                                            <input type="text" id="descricao" class="form-control"  placeholder="Descrição do compromisso">
+                                            <input type="text" name="descricao" class="form-control"  placeholder="Descrição do compromisso">
+                                          </div>
+                                          <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                            <button type="submit" class="btn btn-success" id="save">Salvar</button>
                                           </div>
                                         </form>
                                       </div>
-                                      <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                        <button type="button" class="btn btn-success" id="save">Salvar</button>
-                                      </div>
+
                                     </div>
                                   </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><hr>
+                         <div class="row">
+                             {% for x in compromissos %}
+                                <div class="col-auto border rounded border-info card">
+                                        <div class="row justify-content-center mb-1">
+                                            <div class="col-auto">{{x.descricao}}</div>
+                                        </div><hr>
+                                        <div class="row justify-content-center">
+                                            <div class="col-12 ">
+                                                   <div class="row">
+                                                        <div class="col-auto">
+                                                             Data: {{x.data}}
+                                                        </div>
+                                                   </div>
+                                                   <div class="row">
+                                                        <div class="col-auto">
+                                                            Hora de Inicio: {{x.horaDeInicio }}
+                                                        </div>
+                                                   </div>
+                                                   <div class="row">
+                                                        <div class="col-auto">
+                                                             Hora de Termino: {{x.horaDeInicio }}
+                                                        </div>
+                                                   </div>
+                                                   <div class="row">
+                                                        <div class="col-auto">
+                                                            Descrição: {{x.horaDeInicio }}
+                                                        </div>
+                                                   </div>
+                                                   <div class="row">
+                                                        <div class="col-auto">
+                                                            Duração: {{x.horaDeInicio }}
+                                                        </div>
+                                                   </div>
+                                             </div>
+                                        </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="row">
+                                        <div class="col-auto">
+                                            <button type="button" class="btn btn-danger" data-value-id="{{x.id}}" id="excluir"> Excluir</button>
+                                        </div>
+                                    </div><br>
+                                    <div class="row">
+                                          <div class="col-auto">
+                                                <button type="button" class="btn btn-warning" data-value-id="{{x.id}}" id="editar" >Editar</button>
+                                          </div>
+                                    </div><br>
+                                     <div class="row">
+                                          <div class="col-auto">
+                                                <button type="button" class="btn btn-info" data-value-id="{{x.id}}" id="consulta">Consulte</button>
+                                          </div><br>
+                                    </div>
+                                </div>
+                             {% endfor %}
+                            <div>
+                         </div>
                        </div>
                    </div>
                </div>
+
+               <div class="modal fade" id="modal-Form" tabindex="-1" aria-labelledby="exampleModalLabel" >
+                <div class="modal-dialog modal-xl">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Editar</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="conteudo-form" name="modal-body-principal" >
+
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                      <button type="button" class="btn btn-success ClickSalvarEdicao" data-bs-dismiss="modal">Atualizar</button>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
             </div>
         </div>
     </div>
@@ -85,40 +162,56 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 <script>
-$(document).ready(function (){
-    $("#save").click(function (){
-        $.ajax({
-            type:'POST',
-            url:'{% url "salvar_compromisso" %}',
-            data:{
-                'data': $("#dataCompromisso").val(),
-                'horaInicio': $("#horaInicio").val(),
-                'horaTermino': $("#horaTermino").val(),
-                'descricao': $("#descricao").val(),
-                'csrfmiddlewaretoken':'{{ csrf_token }}',
-            },
-            cache: false,
-            success: function (dataItem) {
-                resposta = Object.keys(dataItem)
-                if(resposta == 'Erro'){
-                    Swal.fire(
-                      'Não foi possível cadastrar!!',
-                      'Já existe um compromisso para este horário!',
-                      'error'
-                    )
-                }else if(reposta == "Sucesso"){
-                    Swal.fire(
-                      'Sucesso!!',
-                      'Cadastrado com Sucesso!',
-                      'error'
-                    )
-                }
+    $(document).ready(function(){
+        $("#excluir").click(function(){
 
-            },
+            Swal.fire({
+                  title: 'Tem certeza que deseja excluir?',
+                  showCancelButton: true,
+                  confirmButtonText: 'Sim',
+                  cancelButtonText: 'Não',
+            }).then((result) => {
+                  if (result.isConfirmed) {
+                       id = $("#excluir").data-value("id")
+                       $.ajax({
+                            type:'POST',
+                            url:'{% url "excluir" %}',
+                            data:{
+                                'id': id,
+                                'csrfmiddlewaretoken':'{{ csrf_token }}',
+                            },
+                            cache: false,
+                            success: function (dataItem) {
 
-        });
-    });
-})
+                            },
+                       });
+                  }
+            })
+        })
+
+    })
+
+
 </script>
+<script>
+    $(document).ready(function(){
+        $("#editar").click(function(){
+            id = $("#editar").data("value-id")
+            $.ajax({
+                type:'POST',
+                url:'{% url "editar" %}',
+                data:{
+                    'id': id,
+                    'csrfmiddlewaretoken':'{{ csrf_token }}',
+                },
+                cache: false,
 
+                success: function (dataItem) {
+                   $("#conteudo-form").html(dataItem);
+                },
+            });
+
+        })
+    })
+</script>
 </html>
