--- a/Templates/home.html
+++ b/Templates/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
    <head>
        <meta charset="utf-8"/>
        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-       <title>Angenda Pessoal</title>
+       <title>Agenda Pessoal</title>
    </head>
    <body>
     <div class="container"><br>
@@ -64,6 +64,10 @@
                                             <label>Decrição</label>
                                             <input type="text" name="descricao" class="form-control"  placeholder="Descrição do compromisso">
                                           </div>
+                                          <div class="form-group">
+                                            <label>Duração</label>
+                                            <input type="Time" name="duracao" class="form-control"  placeholder="Duração">
+                                          </div>
                                           <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                                             <button type="submit" class="btn btn-success" id="save">Salvar</button>
@@ -75,6 +79,18 @@
                                   </div>
                                 </div>
                             </div>
+
+                                <div class="col-auto m-1">
+                                    <form  action="{% url 'consultaPorData' %}" enctype="multipart/form-data" method="POST">{% csrf_token %}
+                                        <div class="row">
+                                             <input type="Date" class="form-control" name="data" placeholder="Informe a data">
+                                        </div>
+                                        <div class="row">
+                                            <button type="submit" class="btn btn-primary">Consulta</button>
+                                        </div>
+                                    </form>
+                                  </div><br>
+
                         </div><hr>
                          <div class="row">
                              {% for x in compromissos %}
@@ -96,17 +112,17 @@
                                                    </div>
                                                    <div class="row">
                                                         <div class="col-auto">
-                                                             Hora de Termino: {{x.horaDeInicio }}
+                                                             Hora de Termino: {{x.horaDeTermino }}
                                                         </div>
                                                    </div>
                                                    <div class="row">
                                                         <div class="col-auto">
-                                                            Descrição: {{x.horaDeInicio }}
+                                                            Descrição: {{x.descricao }}
                                                         </div>
                                                    </div>
                                                    <div class="row">
                                                         <div class="col-auto">
-                                                            Duração: {{x.horaDeInicio }}
+                                                            Duração: {{x.duracao }}
                                                         </div>
                                                    </div>
                                              </div>
@@ -119,15 +135,11 @@
                                         </div>
                                     </div><br>
                                     <div class="row">
-                                          <div class="col-auto">
-                                                <button type="button" class="btn btn-warning" data-value-id="{{x.id}}" id="editar" >Editar</button>
-                                          </div>
-                                    </div><br>
-                                     <div class="row">
-                                          <div class="col-auto">
-                                                <button type="button" class="btn btn-info" data-value-id="{{x.id}}" id="consulta">Consulte</button>
+                                        <div class="col-auto">
+                                                <a type="submit" class="btn btn-warning" href="{% url 'editar' x.id %}" >Editar</a>
                                           </div><br>
-                                    </div>
+                                    </div><br>
+
                                 </div>
                              {% endfor %}
                             <div>
@@ -135,23 +147,6 @@
                        </div>
                    </div>
                </div>
-
-               <div class="modal fade" id="modal-Form" tabindex="-1" aria-labelledby="exampleModalLabel" >
-                <div class="modal-dialog modal-xl">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Editar</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body" id="conteudo-form" name="modal-body-principal" >
-
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                      <button type="button" class="btn btn-success ClickSalvarEdicao" data-bs-dismiss="modal">Atualizar</button>
-                    </div>
-                  </div>
-                </div>
 
               </div>
             </div>
@@ -172,7 +167,7 @@
                   cancelButtonText: 'Não',
             }).then((result) => {
                   if (result.isConfirmed) {
-                       id = $("#excluir").data-value("id")
+                       id = $("#excluir").data("value-id")
                        $.ajax({
                             type:'POST',
                             url:'{% url "excluir" %}',
@@ -182,36 +177,23 @@
                             },
                             cache: false,
                             success: function (dataItem) {
+                                 resposta = Object.keys(dataItem)
 
+                                 if(resposta == 'Deletado'){
+                                   Swal.fire(
+                                      'Excluido com sucesso!!',
+                                      "",
+                                      'success'
+                                    )
+
+                                    location.reload();
+                                }
                             },
                        });
                   }
             })
         })
 
-    })
-
-
-</script>
-<script>
-    $(document).ready(function(){
-        $("#editar").click(function(){
-            id = $("#editar").data("value-id")
-            $.ajax({
-                type:'POST',
-                url:'{% url "editar" %}',
-                data:{
-                    'id': id,
-                    'csrfmiddlewaretoken':'{{ csrf_token }}',
-                },
-                cache: false,
-
-                success: function (dataItem) {
-                   $("#conteudo-form").html(dataItem);
-                },
-            });
-
-        })
     })
 </script>
 </html>
